[workspace.package]
version = "0.1.3"
edition = "2021"
authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>", 
]
categories = ["algorithms", "data-structures"]
description = "Stream utilities for Rust"
documentation = "https://docs.rs/stream-more"
homepage = "https://github.com/drmingdrmer/stream-more"
keywords = ["stream"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/stream-more"


[workspace.dependencies]
anyhow = "1.0.63"
binary-heap-plus = { version = "0.5.0" }
compare = { version = "0.1.0" }
futures = "0.3"
pretty_assertions = "1.0.0"
pin-project-lite = { version = "0.2.12" }




[workspace]

resolver = "2"

members = [
    "stream-more",
]
exclude = [
]
