[package]
name = "stream-more"
readme = "../README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
description   = { workspace = true }
documentation = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[dependencies]
binary-heap-plus= { workspace = true }
compare         = { workspace = true }
futures         = { workspace = true }

[dev-dependencies]
anyhow             = { workspace = true }
pretty_assertions  = { workspace = true }


[features]

[package.metadata.docs.rs]

# Enable this flag to show all types/mods, including the feature enabled ones on docs.rs
all-features = true

# Sort modules by appearance order for crate `docs`.
# https://doc.rust-lang.org/rustdoc/unstable-features.html#--sort-modules-by-appearance-control-how-items-on-module-pages-are-sorted
rustdoc-args = ["-Z", "unstable-options", "--sort-modules-by-appearance"]
